--- a/package.json
+++ b/package.json
@@ -50,11 +50,22 @@
     "verify": "yarn hardhat:verify"
   },
   "devDependencies": {
+    "@types/cors": "^2",
+    "@types/express": "^5",
+    "@types/morgan": "^1",
     "husky": "~9.1.6",
-    "lint-staged": "~13.2.2"
+    "lint-staged": "~13.2.2",
+    "nodemon": "^3.1.10"
   },
   "packageManager": "yarn@3.2.3",
   "engines": {
     "node": ">=20.18.3"
+  },
+  "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^17.2.2",
+    "express": "^5.1.0",
+    "helmet": "^8.1.0",
+    "morgan": "^1.10.1"
   }
 }
