--- a/packages/server/.env
+++ b/packages/server/.env
@@ -21,3 +21,6 @@ JWT_SECRET=your_jwt_secret_key_here_change_in_production
 
 # API Configuration
 API_RATE_LIMIT=100
+X_BEARER_TOKEN=AAAAAAAAAAAAAAAAAAAAAB4g4QEAAAAA4nnpVggTKH3P2ufuRlfoHMCZeSY%3Df47ojMDaQ7n6CcqOA7YLUnyGNSo3IM6hY91ofc31Lj9cZlEiVW
+# X_BEARER_TOKEN=AAAAAAAAAAAAAAAAAAAAAJIn4QEAAAAA53f3qnuj%2FPJCVEPsUZROuNq3kr0%3DT4a9BZAjkoCsKLOQ32exAhixq7OTWdKXjRMfrxqKQT1IPC4f14
+# X_BEARER_TOKEN=AAAAAAAAAAAAAAAAAAAAAMMn4QEAAAAAGEb8GDjeVq%2BY9P4t3PmR6EJuSIY%3Du0aRQ6YC05kPBFoZgjD0g1Y7pfuvSy1IsddJolZXpjKNYipHTq
