--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -10,20 +10,22 @@
     "test": "jest"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "cors": "^2.8.5",
-    "helmet": "^7.0.0",
-    "dotenv": "^16.3.1",
-    "pg": "^8.11.3",
-    "mysql2": "^3.6.0",
     "bcrypt": "^5.1.1",
-    "jsonwebtoken": "^9.0.2",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
     "express-rate-limit": "^6.10.0",
-    "morgan": "^1.10.0"
+    "helmet": "^7.0.0",
+    "jsonwebtoken": "^9.0.2",
+    "morgan": "^1.10.0",
+    "mysql2": "^3.6.0",
+    "needle": "^3.3.1",
+    "pg": "^8.11.3"
   },
   "devDependencies": {
-    "nodemon": "^3.0.1",
+    "@types/needle": "^3",
     "jest": "^29.6.4",
+    "nodemon": "^3.0.1",
     "supertest": "^6.3.3"
   },
   "keywords": [
