--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -18,6 +18,7 @@
     "@noir-lang/noir_js": "1.0.0-beta.6",
     "@noir-lang/noirc_abi": "1.0.0-beta.6",
     "@noir-lang/types": "1.0.0-beta.6",
+    "@privy-io/react-auth": "^3.0.1",
     "@radix-ui/react-dialog": "^1.1.13",
     "@radix-ui/react-dropdown-menu": "^2.1.6",
     "@radix-ui/react-label": "^2.1.6",
